# tend

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix  result
docs/: ARCHITECTURE.md
src/: audit.rs  cache.rs  config.rs  daemon.rs  display.rs  flake.rs  git.rs  github.rs  main.rs  provider.rs  sync.rs  watch.rs  watch_cache.rs
