[package]
name = "tend"
version = "0.1.0"
edition = "2021"
description = "Workspace repository manager — keeps your repos in sync"
authors = ["Pleme.io <engineering@pleme.io>"]

[[bin]]
name = "tend"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
colored = "2.1"
dirs = "6.0"
shellexpand = "3.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.40", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
